--- a/assets/templates/crypto-b/sass/blocks/trade.scss
+++ b/assets/templates/crypto-b/sass/blocks/trade.scss
@@ -42,6 +42,7 @@
   }
   
   .trade__right-column {
+    padding-bottom: 40px;
     font-size: 16px;
   }
   
@@ -94,6 +95,7 @@
   .trade__left-column {
     align-self: center;
     margin-top: 0;
+    font-size: 35px;
   }
   
   .trade__right-column {
