--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FAQ - Cryptologi</title>
-  <link rel="stylesheet" href="../css/cust.css">
-  <link rel="stylesheet" href="../css/adapt.css">
+  <link rel="stylesheet" href="../css/sty.css">
+  <link rel="stylesheet" href="../css/res.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
