--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -5,18 +5,6 @@
   background-size: cover;
   border-bottom: 10px solid #e94444;
   
-  &::after {
-    content: "";
-    width: 600px;
-    height: 830px;
-    top: 250px;
-    left: 100px;
-    position: absolute;
-    background: url("../img/phone.png") no-repeat;
-    background-size: cover;
-    z-index: 2;
-  }
-  
   & h1 {
     padding: 10px 0;
     margin-top: 90px;
@@ -74,10 +62,6 @@
   .crypto {
     min-height: 550px;
     
-    &::after {
-      display: none;
-    }
-    
     & h1 {
       margin-top: 40px;
       color: $w;
@@ -113,10 +97,6 @@
   .crypto {
     min-height: 550px;
     
-    &::after {
-      display: none;
-    }
-    
     & h1 {
       margin-top: 40px;
       color: $w;
@@ -151,9 +131,6 @@
   }
   
   .crypto {
-    &::after {
-      display: none;
-    }
     & h1 {
       margin-top: 50px;
     }
@@ -171,15 +148,34 @@
 }
 
 /* Настольные компьютеры и ноутбуки ----------- */
-@media only screen and (min-width: 1224px) {
+@media only screen and (max-width: 1224px) {
   .crypto::after {
     display: none;
   }
 }
 
+@media only screen and (min-width: 1224px) {
+  .crypto::after {
+    content: "";
+    position: absolute;
+    width: 400px;
+    height: 550px;
+    top: 380px;
+    left: 60px;
+    background: url("../img/phone-t.png") no-repeat;
+    z-index: 2;
+  }
+}
 
-
-
+@media only screen and (min-width: 1824px) {
+  .crypto::after {
+    width: 600px;
+    height: 830px;
+    top: 250px;
+    left: 100px;
+    background: url("../img/phone.png") no-repeat;
+  }
+}
 
 
 
