--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -162,7 +162,7 @@
     height: 550px;
     top: 380px;
     left: 60px;
-    background: url("../img/phone-t.png") no-repeat;
+    background: url("../img/phone-s.png") no-repeat;
     z-index: 2;
   }
 }
