--- a/assets/templates/crypto/css/sty.css
+++ b/assets/templates/crypto/css/sty.css
@@ -583,7 +583,8 @@ form button:hover {
 .page-main--faq,
 .page-main--terms,
 .page-main--legal,
-.page-main--trading h1 {
+.page-main--trading,
+.page-main--contact h1 {
   margin-top: 0;
   padding-top: 60px;
   text-transform: uppercase;
