--- a/assets/templates/crypto/template/contact.html
+++ b/assets/templates/crypto/template/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Contacts - Cryptologi</title>
+  <title>Contact Us - Cryptologi</title>
   <link rel="stylesheet" href="../css/sty.css">
   <link rel="stylesheet" href="../css/res.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -22,7 +22,7 @@
           <nav class="page-header__main-nav">
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="login.html">LOGIN</a></li>
-              <li class="main-nav__item"><a href="contact.html">CONTACTS</a></li>
+              <li class="main-nav__item"><a href="contact.html">CONTACT</a></li>
               <li class="main-nav__item"><a href="form.html">LOG UP</a></li>
             </ul>
           </nav>
@@ -30,8 +30,13 @@
       </div>
     </div>
   </header>
-  <main class="page-main">
-    
+  <main class="page-main  page-main--contact">
+    <div class="container">
+      <div class="container__adv  container__adv--pm">
+        <h1>Contact Us</h1>
+        <p>GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
+      </div>
+    </div>
   </main>
   <footer class="page-footer">
     <div class="container">
