--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -22,7 +22,7 @@
           <nav class="page-header__main-nav">
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="login.html">LOGIN</a></li>
-              <li class="main-nav__item"><a href="contact.html">CONTACTS</a></li>
+              <li class="main-nav__item"><a href="contact.html">CONTACT</a></li>
               <li class="main-nav__item"><a href="form.html">LOG UP</a></li>
             </ul>
           </nav>
