--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -592,54 +592,30 @@ form p {
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-  .news {
-    min-height: 1530px; }
   .news__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
     padding-top: 40px; }
-  .news__right-column {
-    margin-bottom: 50px; }
   .news__left-column,
   .news__middle-column,
   .news__right-column {
     width: 100%;
     text-align: center; }
+  .news__left-column,
+  .news__middle-column {
+    margin-bottom: 50px; }
+  .news__right-column {
+    padding-bottom: 40px; }
   .news__left-column-second,
   .news__middle-column-second {
     margin-bottom: 50px; } }
 
 /* Smartphones (горизонтальная) ----------- */
 /* Smartphones (вертикальная) ----------- */
-@media only screen and (max-width: 320px) {
-  .news {
-    min-height: 1870px; }
-  .news__flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding-top: 40px; }
-  .news__left-column,
-  .news__middle-column,
-  .news__right-column {
-    width: 100%;
-    text-align: center; }
-  .news__left-column-second,
-  .news__middle-column-second {
-    margin-bottom: 50px; } }
-
 /* iPads (вертикальная и горизонтальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .news {
-    min-height: 720px; } }
-
-/* iPads (вертикальная и горизонтальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .news {
-    min-height: 0; }
   .news__flex {
     padding-bottom: 70px; } }
 
