--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -24,14 +24,14 @@
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="#" class="page-header__login">Login</a></li>
                 <li class="page-header__item"><a href="#" class="page-header__sign-up">Sign Up</a></li>
-                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="#">Login</a></li>
                 <li class="page-header__item"><a href="#">Sign Up</a></li>
-                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
           </div>
@@ -417,7 +417,7 @@
           <b>About</b>
           <ul>
             <li><a href="templates/about.html">About Us</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="templates/contact.html">Contact</a></li>
             <li><a href="templates/privacy.html">Legal & Privacy</a></li>
             <li><a href="templates/terms.html">Terms & Conditions</a></li>
           </ul>
