--- a/assets/templates/crypto-b/templates/trading.html
+++ b/assets/templates/crypto-b/templates/trading.html
@@ -24,14 +24,14 @@
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="../index.html">Login</a></li>
                 <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
-                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="../index.html">Login</a></li>
                 <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
-                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
           </div>
@@ -82,7 +82,7 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
           </ul>
