--- a/assets/templates/crypto-b/templates/contact.html
+++ b/assets/templates/crypto-b/templates/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>FAQ - CryptoLogic</title>
+  <title>About Us - Cryptologic</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -24,14 +24,14 @@
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="../index.html">Login</a></li>
                 <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
-                <li class="page-header__item"><a href="contact.html">Contacts</a></li>
+                <li class="page-header__item"><a>Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="../index.html">Login</a></li>
                 <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
-                <li class="page-header__item"><a href="contact.html">Contacts</a></li>
+                <li class="page-header__item"><a>Contacts</a></li>
               </ul>
             </div>
           </div>
@@ -40,23 +40,8 @@
     </div>
     <div class="container">
       <div class="page-header__rules">
-        <h1>Faq</h1>
-        <b>How do I cancel an order?</b>
-        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
-        <b>Do you allow VPN/Tor connections?</b>
-        <p>Yes we do, however for best performance of the cryptologic web interface and API we recommend using a good and fast connection.</p>
-        <b>Can I trade on margin?</b>
-        <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
-        <b>What is a limit order?</b>
-        <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
-        <b>What is the order book?</b>
-        <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
-        <b>Why is my order stuck as an open order?</b>
-        <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-        <b>Is there a fee to transfer funds to and from Cryptologic?</b>
-        <p>Cryptologic does not charge any transfer fees for moving funds between your Coinbase account and Cryptologic account.</p>
-        <b>Why is my "available" balance less than my total?</b>
-        <p class="page-header--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
+        <h1>Contact Us</h1>
+        <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
       </div>
     </div>
   </header>
@@ -74,7 +59,7 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="page-footer--active"><a>Contact</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
           </ul>
@@ -82,7 +67,7 @@
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li class="page-footer--active"><a>FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="trading.html">Trading Guide</a></li>
           </ul>
