--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -7,7 +7,7 @@
   <title>CryptoLogi</title>
   <link rel="stylesheet" href="css/sty.css">
   <link rel="stylesheet" href="css/res.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
 </head>
 <body>
   <header class="page-header">
