--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -44,7 +44,7 @@
   color: $w;
   font-size: 20px;
   font-weight: bold;
-  font-style: italic;
+  font-style: normal;
   text-transform: uppercase;
   text-decoration: none;
   border: 2px solid $w;
@@ -94,7 +94,7 @@
     color: $w;
     font-size: 16px;
     font-weight: bold;
-    font-style: italic;
+    font-style: normal;
     text-transform: uppercase;
     text-decoration: none;
     border: 2px solid $w;
