--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -6,7 +6,7 @@
     margin-top: 60px;
     font-size: 40px;
     font-weight: bold;
-    font-style: italic;
+    font-style: normal;
   }
   
   & p {
@@ -15,7 +15,7 @@
     color: $w;
     font-size: 25px;
     font-weight: bold;
-    font-style: italic;
+    font-style: normal;
     text-align: right;
     z-index: 3;
   }
