--- a/assets/templates/crypto-b/sass/global/base.scss
+++ b/assets/templates/crypto-b/sass/global/base.scss
@@ -1,7 +1,7 @@
 body {
   min-width: 320px;
   margin: 0;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'SF UI Text', 'Arial' sans-serif;
 }
 
 .container {
