--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -1,6 +1,34 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'SF UI Text';
+  src: url("../fonts/SFUIText-HeavyItalic.eot");
+  src: local("SF UI Text Heavy Italic"), local("SFUIText-HeavyItalic"), url("../fonts/SFUIText-HeavyItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-HeavyItalic.woff") format("woff"), url("../fonts/SFUIText-HeavyItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'SF UI Text';
+  src: url("../fonts/SFUIText-LightItalic.eot");
+  src: local("SF UI Text Light Italic"), local("SFUIText-LightItalic"), url("../fonts/SFUIText-LightItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-LightItalic.woff") format("woff"), url("../fonts/SFUIText-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'SF UI Text';
+  src: url("../fonts/SFUIText-MediumItalic.eot");
+  src: local("SF UI Text Medium Italic"), local("SFUIText-MediumItalic"), url("../fonts/SFUIText-MediumItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-MediumItalic.woff") format("woff"), url("../fonts/SFUIText-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'SF UI Text';
+  src: url("../fonts/SFUIText-Semibold.eot");
+  src: local("SF UI Text Semibold"), local("SFUIText-Semibold"), url("../fonts/SFUIText-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Semibold.woff") format("woff"), url("../fonts/SFUIText-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'SF UI Text';
   src: url("../fonts/SFUIText-Regular.eot");
   src: local("SF UI Text Regular"), local("SFUIText-Regular"), url("../fonts/SFUIText-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/SFUIText-Regular.woff") format("woff"), url("../fonts/SFUIText-Regular.ttf") format("truetype");
   font-weight: normal;
