--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -43,8 +43,7 @@
   padding: 5px 15px;
   color: $w;
   font-size: 20px;
-  font-weight: bold;
-  font-style: normal;
+  font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
   border: 2px solid $w;
