--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -10,6 +10,7 @@
     margin-top: 90px;
     color: $w;
     font-size: 60px;
+    font-weight: 100;
     background: #000;
     border-radius: 10px;
     text-align: center;
@@ -21,6 +22,7 @@
     width: 75%;
     color: $w;
     font-size: 25px;
+    font-weight: 100;
     text-align: right;
     text-transform: uppercase;
   }
@@ -31,7 +33,7 @@
     margin-top: 70px;
     color: #000;
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 400;
     background: #00ffff;
     border: 1px solid #00ffff;
     border-radius: 10px;
