--- a/assets/templates/crypto-b/sass/blocks/rules.scss
+++ b/assets/templates/crypto-b/sass/blocks/rules.scss
@@ -3,11 +3,13 @@
   color: $w;
   
   & h1 {
+    font-weight: 100;
     text-transform: uppercase;
   }
   
   & p {
     font-size: 18px;
+    font-weight: 100;
   }
 }
 
