--- a/assets/templates/crypto-b/sass/blocks/trade.scss
+++ b/assets/templates/crypto-b/sass/blocks/trade.scss
@@ -11,12 +11,12 @@
 .trade__left-column,
 .trade__right-column {
   color: $w;
-  font-weight: bold;
 }
 
 .trade__left-column {
   margin-top: 30px;
-  font-size: 40px;
+  font-size: 35px;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
