--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -5,7 +5,7 @@
   & h2 {
     margin-top: 60px;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 400;
     font-style: normal;
   }
   
@@ -14,8 +14,7 @@
     width: 70%;
     color: $w;
     font-size: 25px;
-    font-weight: bold;
-    font-style: normal;
+    font-weight: 100;
     text-align: right;
     z-index: 3;
   }
