--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -140,9 +140,11 @@
   </section>
   <section class="fly">
     <div class="container">
-      <h2>Fly above<br>the clouds<br>of success</h2>
-      <p class="fly__text">Buy, sell and trade Bitcoin<br>with cryptologi</p>
-      <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of cryptologi is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
+      <div class="container__adv">
+        <h2>Fly above<br>the clouds<br>of success</h2>
+        <p class="fly__text">Buy, sell and trade Bitcoin<br>with cryptologi</p>
+        <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of cryptologi is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
+      </div>
     </div>
   </section>
   <section class="pre-footer">
