--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -26,6 +26,10 @@
             <label for="email">Email</label>
             <input class="modal-login__user" type="email" name="email" id="email" placeholder="you@example.com">
           </div>
+          <div class="form__tel">
+            <label for="phone">Phone:</label>
+            <input type="tel" name="PhoneNumber" if="phone" placeholder="000-000-000">
+          </div>
           <div class="form__password">
             <label for="pass">Password</label>
             <input class="modal-login__password" type="password" name="password" id="pass" placeholder="********">
