--- a/assets/templates/crypto/css/res.css
+++ b/assets/templates/crypto/css/res.css
@@ -18,7 +18,8 @@
 
 @media only screen and (min-width : 1201px) and (max-width : 1499px){
   .page-header__flex-container {
-    justify-content: center;
+    justify-content: space-around;
+    margin-left: 50px;
   }
 
   .adv {
