--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -42,8 +42,14 @@
     </div>
   </section>
   <section class="coin">
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="coin__flex-container">
+        <div class="coin__box  coin__box--bitcoin">
+          <p><span>Bitcoin</span><br>2009</p>
+        </div>
+        <div class="coin__box  coin__box--lite">
+          <p><span>Litecoin</span><br>2011</p>
+        </div>
         <div class="coin__box  coin__box--doge">
           <p><span>Dogecoin</span><br>2013</p>
         </div>
@@ -68,8 +74,14 @@
         <div class="coin__box  coin__box--nem">
           <p><span>Nem</span><br>2015</p>
         </div>
+        <div class="coin__box  coin__box--zcash">
+          <p><span>Zcash</span><br>2016</p>
+        </div>
+        <div class="coin__box  coin__box--stratis">
+          <p><span>Stratis</span><br>2017</p>
+        </div>
       </div>
-    </div>
+    <!-- </div> -->
   </section>
   <section class="read">
     <div class="container">
